# fraud-detection

./: .gitignore  Dockerfile  Guide_Running.html  Makefile  README.md  cert.pem  conftest.py  docker-compose.yml  fix_dashboard.py  key.pem  localhost+1-key.pem  localhost+1.pem  main.py  pyproject.toml  requirements.txt  seed_and_run.py
.github/workflows/: ci.yml
api/: main.py
config/: config.yaml
dashboard/: __init__.py  app.py  app_backup.py  app_fixed.py
data/: fraud_stats.db
docs/: api_documentation.md  architecture.md  ml_pipeline.md  system_design.md
monitoring/: __init__.py  fraud_alerts.py
notebooks/: 01_fraud_eda.py  02_model_comparison.py
scripts/: evaluate.py  retrain.py
simulation/: __init__.py  persistent_store.py  real_time_transactions.py
src/data/: __init__.py  loader.py  preprocessing.py
src/features/: __init__.py  feature_engineering.py  resampling.py
src/inference/: __init__.py  predictor.py  schema.py
src/models/: evaluate_model.py
src/monitoring/: __init__.py  drift_detector.py  explainability.py  model_monitor.py
src/training/: __init__.py  pipeline.py  train_model.py  tuning.py
tests/: test_api.py  test_drift_detector.py  test_pipeline.py  test_predictor.py  test_preprocessing.py  test_simulation.py
